--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -27,6 +27,10 @@ body {
   color: #101010;
 }
 
+button {
+  background-color: transparent;
+}
+
 .container {
   max-width: 1544px;
   margin: 0 auto;
@@ -125,7 +129,7 @@ body {
   bottom: 42px;
   left: 50%;
   transform: translate(-50%, 0);
-  display: flex;
+  display: flex !important;
   justify-content: center;
   align-items: center;
   li {
@@ -169,6 +173,7 @@ body {
 .projects-map {
 
   min-height: 635px;
+  background-image: url("../images/map.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -263,6 +268,7 @@ body {
     justify-content: flex-end;
     color: #FFFFFF;
     padding: 0px 0px 20px 20px;
+    background-image: url("../images/projects-card.jpg");
   }
 
   // .projects-map__card-location
