--- a/src/styles/design-project.scss
+++ b/src/styles/design-project.scss
@@ -48,7 +48,7 @@
   &__stages-inner {
     padding-top: 20px;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: space-between;
     position: relative;
     &::after{
