--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,5 @@
 
 .top {
-
   padding: 110px 0 40px;
 
   // .top__subtitle
@@ -18,7 +17,6 @@
 }
 
 .top-slider {
-
   margin: -2px 0 40px;
 
   // .top-slider__item
@@ -35,7 +33,6 @@
 }
 
 .clients {
-
   padding-bottom: 100px;
 
   // .clients__items
@@ -49,7 +46,7 @@
 }
 .clients-video {
   min-height: 500px;
-  background-image: url("../images/clients-video-bg.jpg");
+  background-image: url("../images/interview-bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -66,7 +63,6 @@
 }
 
 .images {
-
   padding-bottom: 100px;
 
   // .images__bg
@@ -90,7 +86,7 @@
     margin-top: 30px;
     padding-left: 52px;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: space-between;
     max-width: 663px;
     margin-bottom: 100px;
@@ -139,18 +135,11 @@
     justify-content: space-between;
   }
 
-  // .images-section__logo
-
-  &__logo {
-  }
-
   // .images-section__img
 
-  &__img {
-    img {
-      width: 100%;
-      height: 100%;
-    }
+  &__img img {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -166,7 +155,7 @@
 }
 
 .images-section--2 {
-  justify-content: start;
+  justify-content: flex-start;
   margin-bottom: 80px;
 
   .images-section__text {
@@ -201,16 +190,6 @@
     justify-content: space-between;
     align-items: center;
   }
-
-  // .services__item-text
-
-  &__item-text {
-  }
-
-  // .services__item-link
-
-  &__item-link {
-  }
 }
 
 .item-link {
@@ -242,6 +221,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
     li {
       margin-right: 8px;
     }
