dynamic routes for projects

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -19,6 +19,7 @@ html {
 body {
 	min-width: 320px;
   overflow-x: hidden;
+  scroll-behavior: smooth;
   height: 100%;
   font-family: 'TryChotherReg';
   font-weight: 400;
